[tool.poetry]
name = "api-meditacao"
version = "0.1.0"
description = ""
authors = ["MaikRodriguess <maikrs007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
selenium = "^4.26.1"
webdriver-manager = "^4.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
